[gd_scene load_steps=6 format=2]

[ext_resource path="res://recursos/fontes/spacefont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cenas/menus/submenus/comojogar/ComoJogarSubs.gd" type="Script" id=2]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 7
outline_size = 1
outline_color = Color( 0.0392157, 0.45098, 0.0666667, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
outline_size = 2
outline_color = Color( 0.0392157, 0.45098, 0.0666667, 1 )
font_data = ExtResource( 1 )

[node name="ComoJogarBasico" type="VBoxContainer"]
margin_top = 143.0
margin_right = 180.0
margin_bottom = 247.0
theme = SubResource( 4 )
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
nome_menu = "basico"

[node name="Jogar" type="Label" parent="."]
margin_right = 184.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
custom_fonts/font = SubResource( 2 )
text = "COMO_JOGAR_BASICO"
align = 1
autowrap = true

[node name="Branco" type="Label" parent="."]
margin_top = 104.0
margin_right = 184.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 116.0
margin_right = 184.0
margin_bottom = 133.0
alignment = 1

[node name="Anteior" type="Button" parent="HBoxContainer"]
margin_right = 52.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "ANTE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="HBoxContainer"]
margin_left = 56.0
margin_right = 128.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "VOLTAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Proximo" type="Button" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 184.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "PROX"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="HBoxContainer/Anteior" to="." method="_on_Anteior_button_down"]
[connection signal="button_down" from="HBoxContainer/Voltar" to="." method="_on_Voltar_button_down"]
[connection signal="button_down" from="HBoxContainer/Proximo" to="." method="_on_Proximo_button_down"]
